; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/gist/extr_gistutil.c_gistPageRecyclable.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/gist/extr_gistutil.c_gistPageRecyclable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gistPageRecyclable(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i64 @PageIsNew(i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %25

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = call i64 @GistPageIsDeleted(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %24

14:                                               ; preds = %10
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @GistPageGetDeleteXid(i32 %15)
  store i32 %16, i32* %4, align 4
  %17 = call i32 (...) @GetFullRecentGlobalXmin()
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %4, align 4
  %19 = load i32, i32* %5, align 4
  %20 = call i64 @FullTransactionIdPrecedes(i32 %18, i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %14
  store i32 1, i32* %2, align 4
  br label %25

23:                                               ; preds = %14
  br label %24

24:                                               ; preds = %23, %10
  store i32 0, i32* %2, align 4
  br label %25

25:                                               ; preds = %24, %22, %9
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i64 @PageIsNew(i32) #1

declare dso_local i64 @GistPageIsDeleted(i32) #1

declare dso_local i32 @GistPageGetDeleteXid(i32) #1

declare dso_local i32 @GetFullRecentGlobalXmin(...) #1

declare dso_local i64 @FullTransactionIdPrecedes(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
